--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,48 @@
+language: python
 
+python:
+  - "3.8"
+
+jobs:
+  include:
+    - stage: "Build Lab 2."
+      name: "Run tests for Lab 2"
+      python: 3.8
+      install:
+        - cd ./lab2/
+        - pipenv install
+      script: pipenv run pytest tests/tests.py || true
+    - stage: "Build Lab 3."
+      name: "Run Django Server and test it accessibility. Fail to run and test"
+      python: 3.8
+      install:
+        - cd ./Lab_3/
+        - pipenv install
+        - pipenv install requests
+        - pipenv install django
+      script: bash ./scripts/travis-build.sh
+    - stage: "Build Lab 4."
+      name: "Build Docker images & Home task"
+      services:
+        - docker
+      install:
+        - cd ./lab4/
+      script:
+        - docker build -t yuriiurshanskyi/app:django-travis .
+        - docker images
+        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+        - docker push yuriiurshanskyi/app:django-travis
+    - stage: "Build Lab 5."
+      name: "Build and run Docker images via make"
+      services:
+        - docker
+      install:
+        - cd ./Lab_5/
+        - make app
+        - make tests
+      script:
+        - make run
+        - make test-app
+branches:
+  only:
+    - main
