--- a/.travis.yml
+++ b/.travis.yml
@@ -28,10 +28,10 @@ jobs:
       install:
         - cd ./lab4/
       script:
-        - docker build -t yuriiurshanskyi/app:django-travis .
+        - docker build -t yuriiurshanskyi/lab4:django-travis .
         - docker images
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        - docker push yuriiurshanskyi/app:django-travis
+        - docker push yuriiurshanskyi/lab4:django-travis
     - stage: "Build Lab 5."
       name: "Build and run Docker images via make"
       services:
